--- a/carrier-io/Jenkinsfile
+++ b/carrier-io/Jenkinsfile
@@ -3,12 +3,14 @@ def executePerformanceTest(String users, String loadGeneratorsCount, String repo
     sh "pwd"
     sh "ls -l workflows-scripts"
     sh "docker pull getcarrier/perfmeter:latest && docker run -t --rm -u 0:0 \
+        -v ${PWD}:/mnt/jmeter
+        -w /mnt/jmeter
         -e build_id=build_ptf_${BUILD_ID} \
         -e GALLOPER_WEB_HOOK=http://${reportingInstanceUrl}/task/${galloperPostProccessingTaskId} \
         -e JVM_ARGS='-Xmx${lgMemory}g' \
         -e additional_files='{\"tests/InfluxBackendListenerClient-1.1.jar\": \"/jmeter/apache-jmeter-5.0/lib/ext/InfluxBackendListenerClient.jar\"}' \
         getcarrier/perfmeter:latest \
-            -n -t workflows-scripts/circulation/check-in/circulation_checkIn.jmx -q ./carrier.io/parameters.txt"  
+            -n -t ./workflows-scripts/circulation/check-in/circulation_checkIn.jmx -q ./carrier.io/parameters.txt"  
 }
 
 def sendNotification(String testName, String testType, int users, String reportingInstanceUrl, String emailsList, String galloperTaskIdForNotifications){
