--- a/carrier-io/Jenkinsfile
+++ b/carrier-io/Jenkinsfile
@@ -1,7 +1,5 @@
 def executePerformanceTest(String users, String loadGeneratorsCount, String reportingInstanceUrl, String galloperPostProccessingTaskId, String testName, String testType, String rampUp, String duration, String targetUrl, String distribution, String lgMemory, String artifact, String bucket, String tenant){
     def usersCount = Math.round((params.users.toInteger() / params.loadGeneratorsCount.toInteger()).floatValue())
-    sh "pwd"
-    sh "ls -l workflows-scripts"
     sh "docker pull getcarrier/perfmeter:latest && docker run -t --rm -u 0:0 \
         -v ${WORKSPACE}:/mnt/jmeter \
         -v ${WORKSPACE}/reports:/tmp/reports \
@@ -11,6 +9,7 @@ def executePerformanceTest(String users, String loadGeneratorsCount, String repo
         -e additional_files='{\"tests/InfluxBackendListenerClient-1.1.jar\": \"/jmeter/apache-jmeter-5.0/lib/ext/InfluxBackendListenerClient.jar\"}' \
         getcarrier/perfmeter:latest \
             -n -t /mnt/jmeter/workflows-scripts/circulation/check-in/circulation_checkIn.jmx -q /mnt/jmeter/carrier-io/parameters.txt"  
+    sh "rm -rf /mnt/reports/*"        
 }
 
 def sendNotification(String testName, String testType, int users, String reportingInstanceUrl, String emailsList, String galloperTaskIdForNotifications){
@@ -50,8 +49,8 @@ node {
     ])
     
 	stage("Checkout") {
-            deleteDir()
-            step([$class: 'WsCleanup'])
+            //deleteDir()
+            //step([$class: 'WsCleanup'])
             checkout scm
         }
 	withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', 
