--- a/carrier-io/Jenkinsfile
+++ b/carrier-io/Jenkinsfile
@@ -1,6 +1,6 @@
 def executePerformanceTest(String users, String loadGeneratorsCount, String reportingInstanceUrl, String galloperPostProccessingTaskId, String testName, String testType, String rampUp, String duration, String targetUrl, String distribution, String lgMemory, String artifact, String bucket, String tenant){
     def usersCount = Math.round((params.users.toInteger() / params.loadGeneratorsCount.toInteger()).floatValue())
-    sh "docker pull getcarrier/perfmeter:latest && docker run -t --rm -u 0:0 \
+    sh "docker pull getcarrier/perfmeter:latest && docker run -t --rm \
         -v ${WORKSPACE}:/mnt/jmeter \
         -v ${WORKSPACE}/reports:/tmp/reports \
         -e build_id=build_ptf_${BUILD_ID} \
@@ -8,8 +8,7 @@ def executePerformanceTest(String users, String loadGeneratorsCount, String repo
         -e JVM_ARGS='-Xmx${lgMemory}g' \
         -e additional_files='{\"tests/InfluxBackendListenerClient-1.1.jar\": \"/jmeter/apache-jmeter-5.0/lib/ext/InfluxBackendListenerClient.jar\"}' \
         getcarrier/perfmeter:latest \
-            -n -t /mnt/jmeter/workflows-scripts/circulation/check-in/circulation_checkIn.jmx -q /mnt/jmeter/carrier-io/parameters.txt"  
-    sh "rm -rf /mnt/reports/*"        
+            -n -t /mnt/jmeter/workflows-scripts/circulation/check-in/circulation_checkIn.jmx -q /mnt/jmeter/carrier-io/parameters.txt"
 }
 
 def sendNotification(String testName, String testType, int users, String reportingInstanceUrl, String emailsList, String galloperTaskIdForNotifications){
