--- a/carrier-io/Jenkinsfile
+++ b/carrier-io/Jenkinsfile
@@ -48,8 +48,12 @@ node {
     ])
     
 	stage("Checkout") {
-            //deleteDir()
-            //step([$class: 'WsCleanup'])
+            sh "docker pull ubuntu && docker run -t --rm -u 0:0 \
+                -v ${WORKSPACE}/reports:/tmp/reports \
+                ubuntu rm -rf /tmp/reports/*
+            "
+            deleteDir()
+            step([$class: 'WsCleanup'])
             checkout scm
         }
 	withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', 
