--- a/carrier-io/Jenkinsfile
+++ b/carrier-io/Jenkinsfile
@@ -7,7 +7,7 @@ def executePerformanceTest(String users, String loadGeneratorsCount, String repo
         -e JVM_ARGS='-Xmx${lgMemory}g' \
         -e additional_files='{\"tests/InfluxBackendListenerClient-1.1.jar\": \"/jmeter/apache-jmeter-5.0/lib/ext/InfluxBackendListenerClient.jar\"}' \
         getcarrier/perfmeter:latest \
-            -n -t /mnt/jmeter/workflows-scripts/circulation/check-in/circulation_checkIn.jmx -q /mnt/jmeter/carrier-io/parameters.txt"
+            -n -t /mnt/jmeter/workflows-scripts/circulation/check-in/circulation_checkIn.jmx -q /mnt/jmeter/carrier-io/parameters.txt -o /mnt/jmeter/reports"
 }
 
 def sendNotification(String testName, String testType, int users, String reportingInstanceUrl, String emailsList, String galloperTaskIdForNotifications){
