--- a/carrier-io/Jenkinsfile
+++ b/carrier-io/Jenkinsfile
@@ -17,7 +17,7 @@ def sendNotification(String testName, String testType, int users, String reporti
 def printJmx(){
     final files = findFiles(glob: 'workflows-scripts/**/*.jmx')
     for (def i=0; i<files.length; i++) {
-        print ${files[i].path}
+        echo "${files[i].path}"
     }
 }
 
