--- a/carrier-io/Jenkinsfile
+++ b/carrier-io/Jenkinsfile
@@ -1,24 +1,20 @@
 def executePerformanceTest(String users, String loadGeneratorsCount, String reportingInstanceUrl, String galloperPostProccessingTaskId, String testName, String testType, String rampUp, String duration, String targetUrl, String distribution, String lgMemory, String artifact, String bucket, String tenant){
     def usersCount = Math.round((params.users.toInteger() / params.loadGeneratorsCount.toInteger()).floatValue())
-    sh "docker pull getcarrier/perfmeter:latest && docker run -t --rm -u 0:0 \
-        -v ${WORKSPACE}:/mnt/jmeter \
-        -e build_id=build_ptf_${BUILD_ID} \
-        -e GALLOPER_WEB_HOOK=http://${reportingInstanceUrl}/task/${galloperPostProccessingTaskId} \
-        -e JVM_ARGS='-Xmx${lgMemory}g' \
-        -e additional_files='{\"tests/InfluxBackendListenerClient-1.1.jar\": \"/jmeter/apache-jmeter-5.0/lib/ext/InfluxBackendListenerClient.jar\"}' \
-        getcarrier/perfmeter:latest \
-            -n -t /mnt/jmeter/workflows-scripts/circulation/check-in/circulation_checkIn.jmx -q /mnt/jmeter/carrier-io/parameters.txt"
+    final files = findFiles(glob: 'workflows-scripts/**/*.jmx')
+    for (def i=0; i<files.length; i++) {
+        sh "docker pull getcarrier/perfmeter:latest && docker run -t --rm -u 0:0 \
+            -v ${WORKSPACE}:/mnt/jmeter \
+            -e build_id=build_${JOB_NAME}_${BUILD_ID} \
+            -e GALLOPER_WEB_HOOK=http://${reportingInstanceUrl}/task/${galloperPostProccessingTaskId} \
+            -e JVM_ARGS='-Xmx${lgMemory}g' \
+            -e additional_files='{\"tests/InfluxBackendListenerClient-1.1.jar\": \"/jmeter/apache-jmeter-5.0/lib/ext/InfluxBackendListenerClient.jar\"}' \
+            getcarrier/perfmeter:latest \
+                -n -t /mnt/jmeter/${files[i].path} -q /mnt/jmeter/carrier-io/parameters.txt"
+    }
 }
 
 def sendNotification(String testName, String testType, int users, String reportingInstanceUrl, String emailsList, String galloperTaskIdForNotifications){
     sh(script: """curl -XPOST -H "Content-Type: application/json" -d '{"notification_type": "api","test": "${testName}", "test_type": "${testType}", "users": ${users}, "influx_host": "${reportingInstanceUrl}", "smpt_user": "folio.email.notifications@gmail.com","smpt_password": "dPwbI9CYw5M5bjU6", "user_list": [${emailsList}]}' http://${reportingInstanceUrl}/task/${galloperTaskIdForNotifications}""")
-}
-
-def printJmx(){
-    final files = findFiles(glob: 'workflows-scripts/**/*.jmx')
-    for (def i=0; i<files.length; i++) {
-        echo "${files[i].path}"
-    }
 }
 
 node {
@@ -64,7 +60,6 @@ node {
 						secretKeyVariable: 'AWS_SECRET_ACCESS_KEY']]) {
 		try {
 			stage("Execute tests") {
-                printJmx()
 				executePerformanceTest(params.users, params.loadGeneratorsCount, params.reportingInstanceUrl, params.galloperPostProccessingTaskId, params.testName, params.testType, params.rampUp, params.duration, params.targetUrl, params.distribution, params.lgMemory, params.artifact, params.bucket, params.tenant)
 			}
 		} catch (Exception err){
