--- a/carrier-io/Jenkinsfile
+++ b/carrier-io/Jenkinsfile
@@ -1,8 +1,8 @@
 STACK_NAME = "performance-testing-load-generators"
 MONITORING_STACK_NAME = "monitoring-performance-testing"
 
-def createStack(String loadGeneratorsCount, String instanceType, String spotPrice, String reportingInstanceUrl, String targetRegion, String lgMemory, String targetEnv){
-    sh(script: "aws cloudformation --profile ${targetEnv} create-stack --stack-name ${STACK_NAME} \
+def createStack(String loadGeneratorsCount, String instanceType, String spotPrice, String reportingInstanceUrl, String targetRegion, String lgMemory){
+    sh(script: "aws cloudformation create-stack --stack-name ${STACK_NAME} \
         --region ${targetRegion} \
         --template-body file://${WORKSPACE}/carrier-io/scripts/cloudformation/load_generator.yml \
         --parameters ParameterKey=InstanceType,ParameterValue=${instanceType} \
@@ -10,7 +10,7 @@ def createStack(String loadGeneratorsCount, String instanceType, String spotPric
         ParameterKey=LoadGeneratorsCount,ParameterValue=${loadGeneratorsCount} \
         ParameterKey=ReportingInstanceHost,ParameterValue=${reportingInstanceUrl} \
         ParameterKey=LoadGeneratorMemory,ParameterValue=${lgMemory}")
-    sh(script: "aws cloudformation --profile ${targetEnv} wait stack-create-complete --stack-name ${STACK_NAME} --region ${targetRegion}")
+    sh(script: "aws cloudformation wait stack-create-complete --stack-name ${STACK_NAME} --region ${targetRegion}")
 } 
 
 def populateData(String tenant){
@@ -21,9 +21,9 @@ def populateData(String tenant){
     sh(script: "[TBD]")
 }
 
-def deleteStack(String stackName, String targetRegion, String targetEnv){
-    sh(script: "aws cloudformation --profile ${targetEnv} delete-stack --stack-name ${stackName} --region ${targetRegion}")
-    sh(script: "aws cloudformation --profile ${targetEnv} wait stack-delete-complete --stack-name ${stackName} --region ${targetRegion}")
+def deleteStack(String stackName, String targetRegion){
+    sh(script: "aws cloudformation delete-stack --stack-name ${stackName} --region ${targetRegion}")
+    sh(script: "aws cloudformation wait stack-delete-complete --stack-name ${stackName} --region ${targetRegion}")
 }
 
 def executePerformanceTest(String users, String loadGeneratorsCount, String reportingInstanceUrl, String galloperPostProccessingTaskId, String testName, String testType, String rampUp, String duration, String targetUrl, String distribution, String lgMemory, String artifact, String bucket, String tenant){
@@ -41,35 +41,35 @@ def executePerformanceTest(String users, String loadGeneratorsCount, String repo
     }
 }
 
-def getInstancesCount(String targetCluster, String targetEnv){
+def getInstancesCount(String targetCluster){
     def allInstances = sh([
-        script: "aws ecs list-container-instances --cluster ${targetCluster} --profile ${targetEnv} | jq [.containerInstanceArns[]]",
+        script: "aws ecs list-container-instances --cluster ${targetCluster} | jq [.containerInstanceArns[]]",
         returnStdout: true
     ]);
     allInstances = Eval.me(allInstances)
     return allInstances;
 }
 
-def installTelegrafAgent(String reportingInstanceUrl, String targetCluster, String targetEnv){
-    def allInstances = getInstancesCount(targetCluster, targetEnv)
+def installTelegrafAgent(String reportingInstanceUrl, String targetCluster){
+    def allInstances = getInstancesCount(targetCluster)
     for(i=1; i <= allInstances.size(); i++){
         def nodeName = targetCluster + '-node-' + i;
-        sh(script: "aws ecs register-task-definition --profile ${targetEnv} --cli-input-json file://${WORKSPACE}/carrier-io/scripts/cloudformation/telegraf.json")
-        sh(script: """aws ecs start-task --profile ${targetEnv} --cluster ${targetCluster} \
+        sh(script: "aws ecs register-task-definition --cli-input-json file://${WORKSPACE}/carrier-io/scripts/cloudformation/telegraf.json")
+        sh(script: """aws ecs start-task --cluster ${targetCluster} \
             --overrides '{ "containerOverrides": [ { "name": "busybox", "environment": [ { "name": "INFLUX_HOST", "value": "http://${reportingInstanceUrl}:8086" }, { "name": "TELEGRAF_NODE_HOSTNAME", "value": "${nodeName}" } ] } ] }' \
             --task-definition telegraf-monitoring --container-instances ${allInstances[i-1]}""")
     }
 }
 
-def stopMonitoringTask(String targetCluster, String targetEnv){
+def stopMonitoringTask(String targetCluster){
     def taskArns = sh([
-        script: "aws ecs list-tasks --profile ${targetEnv} --cluster ${targetCluster} --family telegraf-monitoring | jq [.taskArns[]]",
+        script: "aws ecs list-tasks --cluster ${targetCluster} --family telegraf-monitoring | jq [.taskArns[]]",
         returnStdout: true
     ]);
     taskArns = Eval.me(taskArns)
     if(taskArns != null){
         for(int i=0; i<taskArns.size(); i++){
-            sh(script: "aws ecs stop-task --profile ${targetEnv} --cluster ${targetCluster} --task ${taskArns[i]}")
+            sh(script: "aws ecs stop-task --cluster ${targetCluster} --task ${taskArns[i]}")
         }
     }
 }
@@ -106,7 +106,6 @@ node {
             string(defaultValue: "481d5b9d-fd90-45c6-a38f-0fad1b4d8572", description: "Galloper task id for notifications", name: "galloperTaskIdForNotifications"),
             string(defaultValue: "43-57", description: "user flow distribution", name: "distribution"),
             string(defaultValue: "us-east-1", description: "region", name: "targetRegion"),
-            string(defaultValue: "dev", description: "target environment (e.g., dev/int)", name: "targetEnv"),
             string(defaultValue: "gcp1-pvt", description: "cluster name to monitor", name: "targetCluster")
         ])
     ])
@@ -132,15 +131,15 @@ node {
             }
 
             stage("Configure resources monitoring") {
-                installTelegrafAgent(params.reportingInstanceUrl, params.targetCluster, params.targetEnv)
+                installTelegrafAgent(params.reportingInstanceUrl, params.targetCluster)
             }*/
 
             stage("Configure load generators") {
-                createStack(params.loadGeneratorsCount, params.instanceType, params.spotPrice, params.reportingInstanceUrl, params.targetRegion, params.lgMemory, params.targetEnv)
+                createStack(params.loadGeneratorsCount, params.instanceType, params.spotPrice, params.reportingInstanceUrl, params.targetRegion, params.lgMemory)
             }    
 
             stage("Execute tests") {
-                executePerformanceTest(params.users, params.loadGeneratorsCount, params.reportingInstanceUrl, params.galloperPostProccessingTaskId, params.testName, params.testType, params.rampUp, params.duration, params.targetUrl, params.distribution, params.targetEnv, params.lgMemory, params.artifact, params.bucket, params.tenant)
+                executePerformanceTest(params.users, params.loadGeneratorsCount, params.reportingInstanceUrl, params.galloperPostProccessingTaskId, params.testName, params.testType, params.rampUp, params.duration, params.targetUrl, params.distribution, params.lgMemory, params.artifact, params.bucket, params.tenant)
             }
 
             stage("Send Notification") {
@@ -152,8 +151,8 @@ node {
 		println err
 	} finally { 
         stage('Shut down load generators and FOLIO environment'){
-            deleteStack(STACK_NAME, params.targetRegion, params.targetEnv)
-            stopMonitoringTask(params.targetCluster, params.targetEnv)
+            deleteStack(STACK_NAME, params.targetRegion)
+            stopMonitoringTask(params.targetCluster)
         }
 	}
 }
