Delete stack added to exeptional stage

--- a/carrier-io/Jenkinsfile
+++ b/carrier-io/Jenkinsfile
@@ -148,6 +148,9 @@ node {
         }
 
     } catch (Exception err){
+        stage('Shut down load generators and FOLIO environment'){
+            deleteStack(STACK_NAME, params.targetRegion)
+            stopMonitoringTask(params.targetCluster)
 		println err
 	} finally { 
         stage('Shut down load generators and FOLIO environment'){
