--- a/carrier-io/Jenkinsfile
+++ b/carrier-io/Jenkinsfile
@@ -35,14 +35,33 @@ def executePerformanceTest(String users, String loadGeneratorsCount, String repo
     def usersCount = Math.round((params.users.toInteger() / params.loadGeneratorsCount.toInteger()).floatValue())
     final files = findFiles(glob: 'workflows-scripts/**/*.jmx')
     for (def i=0; i<files.length; i++) {
-        sh "docker pull getcarrier/perfmeter:latest && docker run -t --rm -u 0:0 \
+        /*sh "docker pull getcarrier/perfmeter:latest && docker run -t --rm -u 0:0 \
             -v ${WORKSPACE}:/mnt/jmeter \
             -e build_id=build_${JOB_NAME}_${BUILD_ID} \
             -e GALLOPER_WEB_HOOK=http://${reportingInstanceUrl}/task/${galloperPostProccessingTaskId} \
             -e JVM_ARGS='-Xmx${lgMemory}g' \
             -e additional_files='{\"tests/InfluxBackendListenerClient-1.1.jar\": \"/jmeter/apache-jmeter-5.0/lib/ext/InfluxBackendListenerClient.jar\"}' \
             getcarrier/perfmeter:latest \
-                -n -t /mnt/jmeter/${files[i].path} -q /mnt/jmeter/carrier-io/parameters.txt"
+                -n -t /mnt/jmeter/${files[i].path} -q /mnt/jmeter/carrier-io/parameters.txt" */
+        
+        withCredentials([string(credentialsId: 'perf_redis_password_u51', variable: 'redisPassword')]) {
+            sh "docker pull getcarrier/control_tower:1.5 && docker run -t --rm \
+                -e REDIS_HOST=${reportingInstanceUrl} \
+                -e REDIS_PASSWORD=${redisPassword} \
+                -e loki_host=http://${reportingInstanceUrl} \
+                -e loki_port=3100 \
+                -e build_id=build_${JOB_NAME}_${BUILD_ID} \
+                -e GALLOPER_WEB_HOOK=http://${reportingInstanceUrl}/task/${galloperPostProccessingTaskId} \
+                -e galloper_url=http://${reportingInstanceUrl} \
+                -e bucket=${bucket} \
+                -e JVM_ARGS='-Xmx${lgMemory}g' \
+                -e DURATION=${duration} \
+                -e additional_files='{\"tests/InfluxBackendListenerClient-1.1.jar\": \"/jmeter/apache-jmeter-5.0/lib/ext/InfluxBackendListenerClient.jar\"}' \
+                -e artifact=${artifact} getcarrier/control_tower:1.5 \
+                -c getcarrier/perfmeter:1.5 -e '{\"cmd\": \"-n -t /mnt/jmeter/${testName}.jmx -JDISTRIBUTION=${distribution} -Jtenant=${tenant} -Jtest_name=${testName} -Jtest.type=${testType} -Jenv.type=${targetEnv} -JVUSERS=${usersCount} -JHOSTNAME=${targetUrl} -JRAMP_UP=${rampUp} -JDURATION=${duration} -Jinflux.host=${reportingInstanceUrl} \"}' -r 1 -t perfmeter -q ${loadGeneratorsCount} \
+                -n supertestjob"  
+        }
+
         break; // remove to run all tests
     }
 }
