--- a/carrier-io/Jenkinsfile
+++ b/carrier-io/Jenkinsfile
@@ -59,8 +59,9 @@ def executePerformanceTest(String users, String loadGeneratorsCount, String repo
                 -e additional_files='{\"tests/InfluxBackendListenerClient-1.1.jar\": \"/jmeter/apache-jmeter-5.0/lib/ext/InfluxBackendListenerClient.jar\"}' \
                 -e artifact=${artifact} \
                 getcarrier/control_tower:latest \
-                -c getcarrier/perfmeter:latest \
-                -r 1 -t perfmeter -q ${loadGeneratorsCount} -n performance_test_job"
+                    -c getcarrier/perfmeter:latest \
+                    -e '{\"cmd\": \"-n -t /mnt/jmeter/${files[i].path}  -q /mnt/jmeter/carrier-io/parameters.txt\", \                
+                    -r 1 -t perfmeter -q ${loadGeneratorsCount} -n performance_test_job"
         }
 
         break; // remove to run all tests
