--- a/carrier-io/Jenkinsfile
+++ b/carrier-io/Jenkinsfile
@@ -60,7 +60,16 @@ def executePerformanceTest(String users, String loadGeneratorsCount, String repo
                 -e artifact=${artifact} \
                 getcarrier/control_tower:latest \
                     -c getcarrier/perfmeter:latest \
-                    -e '{\"cmd\": \"-n -t /mnt/jmeter/${files[i].path} -q /mnt/jmeter/carrier-io/parameters.txt\"}' \
+                -e '{\"cmd\": \"-n -t /mnt/jmeter/${testName}.jmx\", \
+                    \"DISTRIBUTION\": \"${distribution}\", \
+                    \"tenant\": \"${tenant}\", \
+                    \"test_name\": \"${testName}\", \
+                    \"test.type\": \"${testType}\", \
+                    \"VUSERS\": \"${usersCount}\", \
+                    \"HOSTNAME\": \"${targetUrl}\", \
+                    \"RAMP_UP\": \"${rampUp}\", \
+                    \"DURATION\": \"${duration}\", \
+                    \"influx.host\": \"${reportingInstanceUrl}\"}' \
                     -r 1 -t perfmeter -q ${loadGeneratorsCount} -n performance_test_job"
         }
 
